# esp32-wifi-scope

./: README.md
Firmware/: .clang-format  .gitignore  CMakeLists.txt  clang_format.ps1  platformio.ini  sdkconfig.esp32-s3-devkitc-1
Firmware/Application/: CMakeLists.txt  custom_cli_cmd.c  custom_cli_cmd.h  custom_cli_lut.c  custom_cli_lut.h  main.c  oscilloscope_app.c  oscilloscope_app.h
Firmware/Application/Config/: adc_config.c  adc_config.h  capture_config.c  capture_config.h  colour_config.c  colour_config.h  gpio_config.c  gpio_config.h  io_config.c  io_config.h  led_config.c  led_config.h  project_config.h  pwm_config.c  pwm_config.h  uart_config.c  uart_config.h
Firmware/Framework/: CMakeLists.txt
Firmware/Framework/API/: capture_api.c  capture_api.h  cmd_api.c  cmd_api.h  cmd_api_helper.c  cmd_api_helper.h  debug_api.c  debug_api.h  heap_api.c  heap_api.h  io_api.c  io_api.h  led_api.c  led_api.h  uart_api.c  uart_api.h  voltage_api.c  voltage_api.h
Firmware/Framework/APP/: cli_app.c  cli_app.h  cli_cmd.c  cli_cmd.h  default_cli_lut.c  default_cli_lut.h  led_app.c  led_app.h
Firmware/Framework/Common/: freertos_types.h  run_time_stats.h
Firmware/Framework/Driver/: adc_driver.c  adc_driver.h  exti_driver.c  exti_driver.h  gpio_driver.c  gpio_driver.h  pwm_driver.c  pwm_driver.h  uart_driver.c  uart_driver.h
Firmware/Framework/Utility/: baudrate.c  baudrate.h  colour.c  colour.h  error_messages.c  example_config.h  float_parts.h  framework_config.h  math_utils.c  math_utils.h  message.h  ring_buffer.c  ring_buffer.h  run_time_stats.h
Firmware/Framework/Utility/Typedefs/: freertos_typedefs.h
Firmware/src/: main.c
Software/: frame_reader.py  requirements.txt  scope.py  scope_plot.py
